--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ github_username:  mukeshsumanlawyer
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
