--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # basic options
-title: Advocate & Legal Consultant
+title: Mukesh Kumar Suman
 author: Mukesh Kumar Suman
 email: mukesh_suman@outlook.com
 description: Advocate & Legal Consultant
